--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "html-loader": "^0.4.4",
     "webpack": "^1.13.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bozch/learningvue"
   }
 }
